<resources>
    <string name="app_name">CelebLingo</string>
    <string name="title">Title</string>
    <string name="speak_aloud">Speak Aloud</string>
    <string name="open_setting">Open Setting</string>
    <string name="oops">OOPS</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="error_msg_2">Please check your Internet Connection</string>
    <string name="reload">Reload</string>
    <string name="item_image">Item Image</string>
    <string name="organizer">Organizer</string>
    <string name="summary">Summary</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="attendees">Attendees</string>
    <string name="join">Join</string>
    <string name="no_data">No Upcoming Classes</string>
    <string name="no_history_data">No Classes History</string>
    <string name="title_home">Home</string>
    <string name="meeting">Class</string>
    <string name="sign_in">Sign In</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="upcoming">Upcoming</string>
    <string name="history_title">History</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="kidi_ai">Kidi AI</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="no_ongoing_class">No Ongoing Class</string>
    <string name="close_chat">Close Chat</string>
    <string name="please_wait">Please Wait…</string>
    <string name="create_new_class">Create New Class</string>
    <string name="enter_your_name">Enter Your Names</string>
    <string name="create">Create</string>
    <string name="config">Config</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="enter_your_email">Enter Your Email...</string>
    <string name="or">Or</string>
</resources>