<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/rounded_bg"
    android:padding="5dp"
    android:backgroundTint="@color/white"
    android:orientation="vertical">

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/organizer_display_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/organizer"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/summary_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/summary"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/description"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/start_time_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/start_time"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/end_time_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/end_time"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/attendee_email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/attendees"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/join_meeting_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:visibility="gone"
        android:text="@string/join"
        android:textAlignment="center"
        android:textSize="20sp" />


</LinearLayout>