<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        app:tint="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/close_btn"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            android:id="@+id/organizer_display_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/organizer"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/summary_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/description_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/start_time_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_time"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/end_time_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_time"
            android:textSize="18sp"
            android:padding="5dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/attendee_email_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attendees"
            android:textSize="18sp"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@color/black"
            />

        <Button
            android:id="@+id/join_meeting_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/join"
            android:textSize="20sp"
            android:padding="10dp"
            android:textAlignment="center"
            />

    </LinearLayout>

</RelativeLayout>